--- a/css/pets.css
+++ b/css/pets.css
@@ -15,32 +15,32 @@
   gap: 48px 20px;
 }
 
-.pets__figure:nth-child(1) {
+.pets__item:nth-child(1) {
   grid-column: 1 / 6;
   grid-row: 1 / 2;
 }
 
-.pets__figure:nth-child(2) {
+.pets__item:nth-child(2) {
   grid-column: 6 / 9;
   grid-row: 1 / 2;
 }
 
-.pets__figure:nth-child(3) {
+.pets__item:nth-child(3) {
   grid-column: 9 / 13;
   grid-row: 1 / 3;
 }
 
-.pets__figure:nth-child(4) {
+.pets__item:nth-child(4) {
   grid-column: 1 / 4;
   grid-row: 2 / 3;
 }
 
-.pets__figure:nth-child(5) {
+.pets__item:nth-child(5) {
   grid-column: 4 / 7;
   grid-row: 2 / 3;
 }
 
-.pets__figure:nth-child(6) {
+.pets__item:nth-child(6) {
   grid-column: 7 / 9;
   grid-row: 2 / 3;
 }
@@ -72,46 +72,46 @@
     gap: 40px 20px;
   }
 
-  .pets__figure:nth-child(1) {
+  .pets__item:nth-child(1) {
     grid-column: 1 / 5;
     grid-row: 1 / 2;
   }
 
-  .pets__figure:nth-child(1) .pets__img {
+  .pets__item:nth-child(1) .pets__img {
     width: 380px;
     height: 201px;
   }
 
-  .pets__figure:nth-child(2) {
+  .pets__item:nth-child(2) {
     grid-column: 5 / 7;
     grid-row: 1 / 2;
   }
 
-  .pets__figure:nth-child(2) .pets__img {
+  .pets__item:nth-child(2) .pets__img {
     width: 180px;
     height: 201px;
   }
 
-  .pets__figure:nth-child(3) {
+  .pets__item:nth-child(3) {
     grid-column: 7 / 10;
     grid-row: 1 / 3;
   }
 
-  .pets__figure:nth-child(3) .pets__figcaption {
+  .pets__item:nth-child(3) .pets__figcaption {
     width: 220px;
   }
 
-  .pets__figure:nth-child(4) {
+  .pets__item:nth-child(4) {
     grid-column: 1 / 3;
     grid-row: 2 / 3;
   }
 
-  .pets__figure:nth-child(5) {
+  .pets__item:nth-child(5) {
     grid-column: 3 / 5;
     grid-row: 2 / 3;
   }
 
-  .pets__figure:nth-child(6) {
+  .pets__item:nth-child(6) {
     grid-column: 5 / 7;
     grid-row: 2 / 3;
   }
@@ -131,13 +131,13 @@
 
 @media (max-width: 1023px) {
   .pets {
-    padding-top: 31px;
+    padding-top: 17px;
   }
 
   .pets__title {
     font-size: 30px;
     line-height: 34px;
-    margin-bottom: 30px;
+    margin-bottom: 29px;
   }
 
   .pets__grid {
@@ -145,48 +145,63 @@
     gap: 30px 24px;
   }
 
-  .pets__figure:nth-child(1) {
+  .pets__item:nth-child(1) {
     grid-column: 1 / 7;
   }
 
-  .pets__figure:nth-child(1) .pets__img {
+  .pets__item:nth-child(1) .pets__img {
     width: 460px;
     height: 243px;
   }
 
-  .pets__figure:nth-child(2) {
+  .pets__item:nth-child(2) {
     grid-column: 7 / 10;
   }
 
-  .pets__figure:nth-child(2) .pets__img {
+  .pets__item:nth-child(2) .pets__img {
     width: 216px;
     height: 243px;
   }
 
-  .pets__figure:nth-child(3) {
+  .pets__item:nth-child(3) {
     grid-column: 5 / 10;
     grid-row: 3 / 4;
   }
 
-  .pets__figure:nth-child(4) {
-    grid-column: 1 / 5;
+  .pets__item:nth-child(4) {
+    grid-column: 1 / 6;
     grid-row: 2 / 3;
   }
 
-  .pets__figure:nth-child(5) {
-    grid-column: 6 / 10;
-    grid-row: 2 / 3;
+  .pets__item:nth-child(4) .pets__img {
+    width: 332px;
+    height: 332px;
   }
 
-  .pets__figure:nth-child(6) {
+  .pets__item:nth-child(5) {
+    grid-column: 5 / 10;
+    grid-row: 2 / 3;
+    justify-self: end;
+  }
+
+  .pets__item:nth-child(5) .pets__img {
+    width: 331px;
+    height: 332px;
+  }
+
+  .pets__item:nth-child(6)  {
     grid-column: 1 / 5;
     grid-row: 3 / 4;
+  }
+
+  .pets__item:nth-child(6) .pets__figcaption {
+    width: 200px;
   }
 
   .pets__img {
     width: 100%;
     /* height: 100%; */
-    margin-bottom: 10px;
+    margin-bottom: 3px;
   }
 
 }
@@ -209,42 +224,42 @@
     justify-content: center;
   }
 
-  .pets__figure:nth-child(1) {
+  .pets__item:nth-child(1) {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
   }
-  .pets__figure:nth-child(2) {
+  .pets__item:nth-child(2) {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
   }
-  .pets__figure:nth-child(3) {
+  .pets__item:nth-child(3) {
     grid-column: 1 / 2;
     grid-row: 3 / 4;
   }
-  .pets__figure:nth-child(4) {
+  .pets__item:nth-child(4) {
     grid-column: 1 / 2;
     grid-row: 6 / 7;
   }
-  .pets__figure:nth-child(5) {
+  .pets__item:nth-child(5) {
     grid-column: 1 / 2;
     grid-row: 4 / 5;
   }
-  .pets__figure:nth-child(6) {
+  .pets__item:nth-child(6) {
     grid-column: 1 / 2;
     grid-row: 5 / 6;
   }
 
-  .pets__figure:nth-child(1) .pets__img {
+  .pets__item:nth-child(1) .pets__img {
     width: 270px;
     height: 184px;
   }
 
-  .pets__figure:nth-child(2) .pets__img {
+  .pets__item:nth-child(2) .pets__img {
     width: 270px;
     height: 300px;
   }
 
-  .pets__figure:nth-child(3) .pets__figcaption {
+  .pets__item:nth-child(3) .pets__figcaption {
     width: 170px;
   }
 
