Created header and added adaptive

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,10 @@
-@import 'var.css';
 @import 'normalize.css';
+@import 'fonts.css';
+@import 'var.css';
 @import 'style.css';
+@import 'header.css';
+@import 'burger.css';
+@import 'navigation.css';
 @import 'projects.css';
 @import 'pets.css';
 @import 'about.css';
