--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,3 @@
-@font-face {
-  font-display: swap;
-  font-family: 'Comfortaa';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Comfortaa') url('../fonts/Comfortaa-Regular.woff2') format('woff2'),
-    url('../fonts/Comfortaa-Regular.woff') format('woff');
-}
-
-@font-face {
-  font-display: swap;
-  font-family: 'HelveticaNeueCyr';
-  font-style: normal;
-  font-weight: normal;
-  src: local('HelveticaNeueCyr'), url('../fonts/HelveticaNeueCyr-Roman.woff2') format('woff2'),
-    url('../fonts/HelveticaNeueCyr-Roman.woff') format('woff');
-}
-
-@font-face {
-  font-display: swap;
-  font-family: 'HelveticaNeueCyr';
-  font-style: normal;
-  font-weight: 300;
-  src: local('HelveticaNeueCyr'), url('../fonts/HelveticaNeueCyr-Light.woff2') format('woff2'),
-    url('../fonts/HelveticaNeueCyr-Light.woff') format('woff');
-}
-
-@font-face {
-  font-display: swap;
-  font-family: 'HelveticaNeueCyr';
-  font-style: normal;
-  font-weight: 500;
-  src: local('HelveticaNeueCyr'), url('../fonts/HelveticaNeueCyr-Medium.woff2') format('woff2'),
-    url('../fonts/HelveticaNeueCyr-Medium.woff') format('woff');
-}
-
 html {
   position: relative;
   box-sizing: border-box;
@@ -49,7 +13,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   font-family: 'HelveticaNeueCyr', sans-serif;
-  font-weight: 300;
+  font-weight: 550;
   font-size: 20px;
   color: var(--main-color);
 }
@@ -106,6 +70,10 @@ h2 {
   transform: scale(0);
 }
 
+.lock {
+  overflow: hidden;
+}
+
 /*
 Пример контейнера
 
@@ -116,8 +84,8 @@ h2 {
 */
 
 .container {
-  max-width: 1440px;
-  padding: 0 130px;
+  max-width: 1230px;
+  padding: 0 25px;
   margin: 0 auto;
 }
 
