Created section hero

--- a/css/burger.css
+++ b/css/burger.css
@@ -17,7 +17,7 @@
   left: 0;
   right: 0;
   height: 3px;
-  background-color: var(--main-color);
+  background-color: var(--text-color);
   border-radius: 1px;
   transition: transform .3s ease-out, top .3s ease-out, background-color .3s ease-in-out;
 }
@@ -44,7 +44,7 @@
   top: 50%;
   height: 3px;
   transform: translateY(-50%) scale(1);
-  background-color: var(--main-color);
+  background-color: var(--text-color);
   border-radius: 1px;
   transition: transform .3s ease-out, background-color .3s ease-in-out;
 }
