--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@
 @import 'style.css';
 @import 'header.css';
 @import 'burger.css';
+@import 'hero.css';
 @import 'navigation.css';
 @import 'projects.css';
 @import 'pets.css';
