--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 .header {
   padding-top: 21px;
-  padding-bottom: 27px;
+  padding-bottom: 10px;
 }
 
 .header__container {
@@ -25,7 +25,7 @@
 }
 
 .header__link-phone:hover {
-  color: var(--link-color);
+  color: var(--main-color);
 }
 
 .header__link-phone::before {
