--- a/css/var.css
+++ b/css/var.css
@@ -1,5 +1,5 @@
 :root {
-  --main-color: #282626;
-  --link-color: #FF8A00;
+  --text-color: #282626;
+  --main-color: #FF8A00;
   --menu-bg: #F2F0F1;
 }
