--- a/css/hero.css
+++ b/css/hero.css
@@ -7,7 +7,7 @@
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, auto);
+  grid-template-rows: repeat(3, 1fr);
   gap: 20px;
 }
 
@@ -23,13 +23,14 @@
 } */
 
 .hero__title {
+  grid-row: 1 / span 2;
   justify-self: center;
-  max-width: 390px;
+  align-self: center;
+  max-width: 380px;
   font-weight: 300;
   font-size: 40px;
   line-height: 60px;
-  /* padding-top: 138px; */
-  /* padding-left: 5px; */
+  padding-top: 81px;
 }
 
 .hero__title-color {
@@ -43,7 +44,6 @@
   left: 100px;
   display: flex;
   align-items: flex-end;
-  align-self: center;
   max-width: 180px;
   height: 155px;
 }
@@ -61,9 +61,10 @@
 }
 
 .hero__img {
-  grid-row: 1 / span 2;
+  grid-row: 1 / span 3;
   grid-column-start: 2;
   max-width: 580px;
+  width: 100%;
 }
 
 @media (max-width: 1200px) {
@@ -72,11 +73,12 @@
   }
 
   .hero__container {
-    /* grid-template-rows: auto; */
+    grid-template-rows: repeat(2, 1fr);
     gap: 30px;
   }
 
   .hero__title {
+    grid-row: 1;
     justify-self: flex-end;
     max-width: 299px;
     font-weight: 400;
@@ -92,6 +94,7 @@
   }
 
   .hero__button {
+    top: 23px;
     width: 148px;
     height: 126px;
   }
@@ -102,15 +105,90 @@
   }
 
   .hero__img {
+    grid-row: 1 / span 2;
     max-width: 450px;
     /* height: 450px; */
   }
 }
 
 @media (max-width: 1023px) {
+  .hero__container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto auto;
+  }
+
+  .hero__title {
+    grid-column: 1 / span 3;
+    justify-self: flex-start;
+    max-width: 100%;
+    font-size: 24px;
+    line-height: 30px;
+    padding-top: 0;
+  }
+
+  .hero__title-color {
+    font-size: 40px;
+    line-height: 44px;
+  }
+
+  .hero__button {
+    grid-column: 1;
+    align-self: center;
+    width: 145px;
+    height: 120px;
+    top: -21px;
+    left: 78px;
+  }
+
+  .hero__button::before {
+    width: 78px;
+    height: 75px;
+  }
+
+  .hero__img {
+    grid-row: 2;
+    grid-column: 2 / span 2;
+    justify-self: flex-end;
+    max-width: 420px;
+  }
+
   
 }
 
-@media (max-width: 720px) {
-  
+@media (max-width: 668px) {
+  .hero__container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .hero__title {
+    align-self: flex-start;
+    font-size: 18px;
+    line-height: 26px;
+  }
+
+  .hero__title-color {
+    font-size: 26px;
+  }
+
+  .hero__button {
+    order: 1;
+    top: 0;
+    left: 0;
+    width: 84px;
+    height: 78px;
+    font-size: 8px;
+    line-height: 12px;
+  }
+
+  .hero__button::before {
+    width: 51px;
+    height: 50px;
+  }
+
+  .hero__img {
+    align-self: center;
+    margin-bottom: 60px;
+  }
 }
