--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,14 @@ h2 {
 .title {
   font-size: 50px;
   line-height: 60px;
+  color: var(--text-color);
+}
+
+.text {
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 30px;
+  color: var(--text-color);
 }
 
 .button {
@@ -113,16 +121,41 @@ h2 {
     font-size: 12px;
     line-height: 18px;
   }
+
+  .title {
+    font-size: 44px;
+    line-height: 54px;
+  }
+
+  .text {
+    font-size: 18px;
+    line-height: 26px;
+  }
 }
 
 @media (max-width: 1023px) {
   .container {
     padding: 0 34px;
   }
+
+  .title {
+    font-size: 30px;
+    line-height: 34px;
+  }
+
+  .text {
+    font-size: 14px;
+    line-height: 20px;
+  }
 }
 
 @media (max-width: 720px) {
   .container {
     padding: 0 25px;
+  }
+
+  .title {
+    font-size: 20px;
+    line-height: 24px;
   }
 }
