--- a/css/contacts.css
+++ b/css/contacts.css
@@ -4,16 +4,18 @@
   line-height: 30px;
   color: var(--text-color);
   text-align: center;
+  margin-bottom: 60px;
 }
 
 .contacts__list {
-  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 45px;
 }
 
 .contacts__item {
   position: relative;
-  padding-left: 38px;
-  margin: 0 auto 10px;
+  /* padding-left: 38px; */
 }
 
 .contacts__item:last-child {
@@ -21,7 +23,8 @@
 }
 
 .contacts__item_phone {
-  max-width: 215px;
+  width: 215px;
+  text-align: right;
 }
 
 .contacts__item_phone::before {
@@ -35,7 +38,8 @@
 }
 
 .contacts__item_mail {
-  max-width: 283px;
+  width: 283px;
+  text-align: right;
 }
 
 .contacts__item_mail::before {
@@ -48,5 +52,52 @@
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_0_21)'%3E%3Cpath d='M20 4H4C2.9 4 2.01 4.9 2.01 6L2 18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6C22 4.9 21.1 4 20 4ZM20 8L12 13L4 8V6L12 11L20 6V8Z' fill='%23FF8A00'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_0_21'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
 }
 
+@media (max-width: 1320px) {
+  .contacts {
+    margin-bottom: 40px;
+  }
 
+  .contacts__item {
+    font-size: 18px;
+    line-height: 24px;
+  }
 
+  .contacts__item_phone {
+    width: 194px;
+  }
+
+  .contacts__item_mail {
+    width: 255px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .contacts {
+    margin-bottom: 33px;
+  }
+
+  .contacts__list {
+    gap: 41px;
+  }
+
+  .contacts__item {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .contacts__item_phone {
+    width: 158px;
+  }
+
+  .contacts__item_mail {
+    width: 206px;
+  }
+}
+
+@media (max-width: 620px) {
+  .contacts__list {
+    flex-direction: column;
+    align-items: center;
+    gap: 14px;
+  }
+}
