--- a/css/form.css
+++ b/css/form.css
@@ -12,7 +12,7 @@
 
 .form__label {
   display: inline-block;
-  /* width: 100%; */
+  width: 100%;
   font-weight: 300;
   font-size: 12px;
   line-height: 14px;
@@ -26,6 +26,7 @@
 
 .form__input {
   display: block;
+  max-width: 280px;
   width: 100%;
   height: 40px;
   font-size: 16px;
@@ -40,18 +41,6 @@
   font-size: 12px;
   line-height: 16px;
   margin-left: auto;
-  /* display: block;
-  width: 220px;
-  font-weight: 550;
-  font-size: 12px;
-  line-height: 16px;
-  text-align: center;
-  text-transform: uppercase;
-  color: var(--main-color);
-  background-color: var(--text-color);
-  border: none;
-  padding: 12px 56px;
-  margin: 0 auto; */
 }
 
 .form__button.button::before {
@@ -66,7 +55,8 @@
 
   .form__fieldset {
     justify-content: center;
-    margin-bottom: 0;
+    max-width: 420px;
+    margin: 0 auto;
   }
 
   .form__label {
@@ -98,6 +88,7 @@
     flex-direction: column;
     align-items: center;
     gap: 14px;
+    max-width: 200px;
     margin-bottom: 20px;
   }
 
