--- a/css/projects.css
+++ b/css/projects.css
@@ -1,6 +1,6 @@
 .projects {
   padding-top: 90px;
-  padding-bottom: 90px;
+  padding-bottom: 88px;
 }
 
 .projects__title {
@@ -20,11 +20,18 @@
 .projects__list {
   display: grid;
   grid-template: repeat(4, 1fr) / 100%;
-  gap: 30px;
+  gap: 28px;
 }
 
 .projects__item {
   display: flex;
+  border: 1px solid transparent;
+  transition: border-color .2s ease-in-out;
+}
+
+.projects__item:hover,
+.projects__item:focus {
+  border-color: var(--main-color)
 }
 
 .projects__img {
@@ -147,10 +154,10 @@
   display: grid;
   grid-template: repeat(3, 70px) / repeat(4, 80px);
   gap: 20px;
-  /* margin-bottom: 24px; */
 }
 
 .projects__more-item {
+  position: relative;
   width: 80px;
   height: 70px;
 }
@@ -159,6 +166,14 @@
   display: block;
   width: 100%;
   height: 100%;
+  border: 1px solid transparent;
+  transition: border-color .3s ease-in-out;
+  outline: none;
+}
+
+.projects__more-item__link:hover,
+.projects__more-item__link:focus {
+  border-color: var(--main-color);
 }
 
 .projects__more-link {
