--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,7 +8,7 @@
 @import 'hero.css';
 @import 'about.css';
 @import 'projects.css';
-@import 'pets.css';
+/* @import 'pets.css'; */
 @import 'help.css';
 @import 'swiper.css';
 @import 'feedback.css';
