--- a/src/scss/_pets.scss
+++ b/src/scss/_pets.scss
@@ -1,4 +1,11 @@
 .pets {
-  padding-top: 500px;
+  padding-top: 50px;
   padding-bottom: 50px;
+  &__title {
+    color: yellow;
+  }
+
+  &__container {
+    display: flex;
+  }
 }
