Created section pets

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,1 +1,14 @@
-@import 'pets';
+@import 'components/normalize';
+@import 'components/fonts';
+@import 'components/var';
+@import 'libs/swiper-bundle.min';
+@import 'components/setting';
+@import 'components/header';
+@import 'components/burger';
+@import 'components/navigation';
+@import 'components/hero';
+@import 'components/about';
+@import 'components/projects';
+@import 'components/help';
+@import 'components/swiper';
+@import 'components/pets';
