--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,3 +12,6 @@
 @import 'components/help';
 @import 'components/swiper';
 @import 'components/pets';
+@import 'components/feedback';
+@import 'components/form';
+@import 'components/contacts';
