--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -9,7 +9,7 @@
     grid-template-rows: repeat(3, 1fr);
     gap: 20px;
     min-height: 580px;
-    background-image: url('../img/hero/banner01.png');
+    background-image: url('../../img/hero/banner01.png');
     background-repeat: no-repeat;
     background-position: center;
   }
