--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -13,16 +13,16 @@
       position: relative;
       max-width: 580px;
       width: 100%;
-      background-image: url('../../img/about/bg.jpg');
+      background-image: url('../img/about/bg.jpg');
       background-image: -webkit-image-set(
-        url('../../img/about/bg.avif') 1x,
-        url('../../img/about/bg.webp') 1x,
-        url('../../img/about/bg.jpg') 1x
+        url('../img/about/bg.avif') 1x,
+        url('../img/about/bg.webp') 1x,
+        url('../img/about/bg.jpg') 1x
       );
       background-image: image-set(
-        url('../../img/about/bg.avif') 1x,
-        url('../../img/about/bg.webp') 1x,
-        url('../../img/about/bg.jpg') 1x
+        url('../img/about/bg.avif') 1x,
+        url('../img/about/bg.webp') 1x,
+        url('../img/about/bg.jpg') 1x
       );
       background-size: contain;
       background-repeat: no-repeat;
